--- a/examples/link_prediction/link_prediction.ipynb
+++ b/examples/link_prediction/link_prediction.ipynb
@@ -10,11 +10,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import argparse\n",
     "import os.path as osp\n",
     "\n",
     "import torch\n",
@@ -36,11 +35,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "device(type='cuda')"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')"
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "device"
    ]
   },
   {
@@ -53,13 +64,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = osp.join(osp.dirname(osp.realpath(__file__)), '../../data/MovieLens')\n",
-    "dataset = MovieLens(path, model_name='all-MiniLM-L6-v2')\n",
-    "data = dataset[0].to(device)"
+    "%%capture\n",
+    "path = osp.abspath('')\n",
+    "dataset = MovieLens(path, model_name='all-MiniLM-L6-v2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "HeteroData(\n",
+       "  \u001b[1mmovie\u001b[0m={ x=[9742, 404] },\n",
+       "  \u001b[1muser\u001b[0m={ num_nodes=610 },\n",
+       "  \u001b[1m(user, rates, movie)\u001b[0m={\n",
+       "    edge_index=[2, 100836],\n",
+       "    edge_label=[100836]\n",
+       "  }\n",
+       ")"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = dataset[0].to(device)\n",
+    "data"
    ]
   },
   {
@@ -67,17 +106,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ass user node features for messssage passing"
+    "Add user node features for message passing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "HeteroData(\n",
+       "  \u001b[1mmovie\u001b[0m={ x=[9742, 404] },\n",
+       "  \u001b[1muser\u001b[0m={ x=[610, 610] },\n",
+       "  \u001b[1m(user, rates, movie)\u001b[0m={\n",
+       "    edge_index=[2, 100836],\n",
+       "    edge_label=[100836]\n",
+       "  }\n",
+       ")"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data['user'].x = torch.eye(data['user'].num_nodes, device=device)\n",
-    "del data['user'].num_nodes"
+    "del data['user'].num_nodes\n",
+    "data"
    ]
   },
   {
@@ -90,12 +148,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "HeteroData(\n",
+       "  \u001b[1mmovie\u001b[0m={ x=[9742, 404] },\n",
+       "  \u001b[1muser\u001b[0m={ x=[610, 610] },\n",
+       "  \u001b[1m(user, rates, movie)\u001b[0m={\n",
+       "    edge_index=[2, 100836],\n",
+       "    edge_label=[100836]\n",
+       "  },\n",
+       "  \u001b[1m(movie, rev_rates, user)\u001b[0m={ edge_index=[2, 100836] }\n",
+       ")"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data = T.ToUndirected()(data)\n",
-    "del data['movie', 'rev_rates', 'user'].edge_label"
+    "del data['movie', 'rev_rates', 'user'].edge_label\n",
+    "data"
    ]
   },
   {
@@ -108,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,6 +200,93 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "HeteroData(\n",
+       "  \u001b[1mmovie\u001b[0m={ x=[9742, 404] },\n",
+       "  \u001b[1muser\u001b[0m={ x=[610, 610] },\n",
+       "  \u001b[1m(user, rates, movie)\u001b[0m={\n",
+       "    edge_index=[2, 80670],\n",
+       "    edge_label=[80670],\n",
+       "    edge_label_index=[2, 80670]\n",
+       "  },\n",
+       "  \u001b[1m(movie, rev_rates, user)\u001b[0m={ edge_index=[2, 80670] }\n",
+       ")"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "HeteroData(\n",
+       "  \u001b[1mmovie\u001b[0m={ x=[9742, 404] },\n",
+       "  \u001b[1muser\u001b[0m={ x=[610, 610] },\n",
+       "  \u001b[1m(user, rates, movie)\u001b[0m={\n",
+       "    edge_index=[2, 80670],\n",
+       "    edge_label=[10083],\n",
+       "    edge_label_index=[2, 10083]\n",
+       "  },\n",
+       "  \u001b[1m(movie, rev_rates, user)\u001b[0m={ edge_index=[2, 80670] }\n",
+       ")"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "HeteroData(\n",
+       "  \u001b[1mmovie\u001b[0m={ x=[9742, 404] },\n",
+       "  \u001b[1muser\u001b[0m={ x=[610, 610] },\n",
+       "  \u001b[1m(user, rates, movie)\u001b[0m={\n",
+       "    edge_index=[2, 90753],\n",
+       "    edge_label=[10083],\n",
+       "    edge_label_index=[2, 10083]\n",
+       "  },\n",
+       "  \u001b[1m(movie, rev_rates, user)\u001b[0m={ edge_index=[2, 90753] }\n",
+       ")"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_data"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -131,16 +296,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([25.7292,  7.6899,  2.6580,  1.0576,  1.0000,  2.6460], device='cuda:0')"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "weight = torch.bincount(train_data['user', 'movie'].edge_label)\n",
     "weight = weight.max() / weight\n",
     "\n",
     "def weighted_mse_loss(pred, target, weight=None):\n",
     "    weight = 1. if weight is None else weight[target].to(pred.dtype)\n",
-    "    return (weight * (pred - target.to(pred.dtype)).pow(2)).mean()"
+    "    return (weight * (pred - target.to(pred.dtype)).pow(2)).mean()\n",
+    "\n",
+    "weight"
    ]
   },
   {
@@ -153,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,25 +518,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 010, Loss: 2.4379, Train: 1.0074, Val: 1.0925, Test: 1.1028\n",
+      "Epoch: 020, Loss: 2.4153, Train: 1.0184, Val: 1.1039, Test: 1.1172\n",
+      "Epoch: 030, Loss: 2.3748, Train: 1.0409, Val: 1.1271, Test: 1.1423\n",
+      "Epoch: 040, Loss: 2.3514, Train: 1.0096, Val: 1.1005, Test: 1.1136\n",
+      "Epoch: 050, Loss: 2.3208, Train: 1.0193, Val: 1.1116, Test: 1.1266\n",
+      "Epoch: 060, Loss: 2.4110, Train: 0.9907, Val: 1.0853, Test: 1.0959\n",
+      "Epoch: 070, Loss: 2.3654, Train: 1.0098, Val: 1.1062, Test: 1.1213\n",
+      "Epoch: 080, Loss: 2.2800, Train: 1.0237, Val: 1.1169, Test: 1.1329\n",
+      "Epoch: 090, Loss: 2.2681, Train: 1.0005, Val: 1.0999, Test: 1.1154\n",
+      "Epoch: 100, Loss: 2.2471, Train: 1.0051, Val: 1.1056, Test: 1.1224\n",
+      "Epoch: 110, Loss: 2.2290, Train: 1.0026, Val: 1.1052, Test: 1.1235\n",
+      "Epoch: 120, Loss: 2.2189, Train: 0.9978, Val: 1.1037, Test: 1.1218\n",
+      "Epoch: 130, Loss: 2.2220, Train: 1.0160, Val: 1.1206, Test: 1.1406\n",
+      "Epoch: 140, Loss: 2.2242, Train: 0.9848, Val: 1.0912, Test: 1.1089\n",
+      "Epoch: 150, Loss: 2.2085, Train: 1.0048, Val: 1.1139, Test: 1.1330\n",
+      "Epoch: 160, Loss: 2.1842, Train: 1.0250, Val: 1.1333, Test: 1.1543\n",
+      "Epoch: 170, Loss: 2.1633, Train: 0.9982, Val: 1.1132, Test: 1.1323\n",
+      "Epoch: 180, Loss: 2.1486, Train: 0.9949, Val: 1.1103, Test: 1.1289\n",
+      "Epoch: 190, Loss: 2.1381, Train: 0.9924, Val: 1.1081, Test: 1.1275\n",
+      "Epoch: 200, Loss: 2.1221, Train: 0.9751, Val: 1.0973, Test: 1.1148\n",
+      "Epoch: 210, Loss: 2.1354, Train: 0.9585, Val: 1.0833, Test: 1.0998\n",
+      "Epoch: 220, Loss: 2.1104, Train: 0.9718, Val: 1.0980, Test: 1.1164\n",
+      "Epoch: 230, Loss: 2.0985, Train: 0.9716, Val: 1.0981, Test: 1.1166\n",
+      "Epoch: 240, Loss: 2.1257, Train: 1.0334, Val: 1.1496, Test: 1.1728\n",
+      "Epoch: 250, Loss: 2.1898, Train: 0.9687, Val: 1.0866, Test: 1.1040\n",
+      "Epoch: 260, Loss: 2.1611, Train: 0.9613, Val: 1.0894, Test: 1.1069\n",
+      "Epoch: 270, Loss: 2.0752, Train: 0.9942, Val: 1.1173, Test: 1.1384\n",
+      "Epoch: 280, Loss: 2.0546, Train: 0.9702, Val: 1.1018, Test: 1.1192\n",
+      "Epoch: 290, Loss: 2.0479, Train: 0.9716, Val: 1.1028, Test: 1.1212\n",
+      "Epoch: 300, Loss: 2.0424, Train: 0.9628, Val: 1.0945, Test: 1.1127\n"
+     ]
+    }
+   ],
    "source": [
     "for epoch in range(1, 301):\n",
     "    loss = train()\n",
     "    train_rmse = test(train_data)\n",
     "    val_rmse = test(val_data)\n",
     "    test_rmse = test(test_data)\n",
-    "    print(f'Epoch: {epoch:03d}, Loss: {loss:.4f}, Train: {train_rmse:.4f}, '\n",
-    "          f'Val: {val_rmse:.4f}, Test: {test_rmse:.4f}')"
+    "    if epoch % 10 == 0:\n",
+    "        print(f'Epoch: {epoch:03d}, Loss: {loss:.4f}, Train: {train_rmse:.4f}, '\n",
+    "            f'Val: {val_rmse:.4f}, Test: {test_rmse:.4f}')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.12 (main, Apr  5 2022, 06:56:58) \n[GCC 7.5.0]"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "88516cc94b965045253aac22be7e673e07faa374a8dfeab45aefc65ddf94d8b2"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
