--- a/examples/node_classification.ipynb
+++ b/examples/node_classification.ipynb
@@ -122,7 +122,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "torch_ml",
+   "display_name": "gestures",
    "language": "python",
    "name": "python3"
   },
@@ -136,12 +136,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.6 (main, Oct  7 2022, 20:19:58) [GCC 11.2.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "1515048dda7042adef6e216d2b6f88e6cf31895538a7b0cf2515ea0a8b701628"
+    "hash": "c3b515104a529fd92eac5f3383d8270e478e8619ca575bcffb69ed42fecb28f1"
    }
   }
  },
